Add talk at Chalmers

--- a/cv.tex
+++ b/cv.tex
@@ -87,7 +87,7 @@
 \usepackage{calc}
 
 \setlist[description]{
-  font        = \rmfamily\footnotesize,
+  font	      = \rmfamily\footnotesize,
   parsep      = 0.3ex,
   align       = parleft,
   labelwidth  = \widthof{2020 -- 2018} + 1em,
@@ -105,7 +105,7 @@
 \begin{titlepage}
 \end{titlepage}
 
-  \begin{center}
+\begin{center}
   {\itshape \large \textcolor{darkgray}{CV}}
   \medskip
 
@@ -113,7 +113,7 @@
   \smallskip
 
   \noindent {\large \today}
-  \end{center}
+\end{center}
 % \begin{minipage}{0.5\textwidth}
 %   \raggedleft
 %   \begin{tikzpicture}
@@ -143,8 +143,11 @@
 \begin{minipage}[t]{0.5\textwidth}
   \raggedleft\itshape\small
   \href{https://larssonjohan.com}{larssonjohan.com}\\
-  {\aiOrcid}\, \href{https://orcid.org/0000-0002-4029-5945}{orcid.org/0000-0002-4029-5945}\\
-  {\aiResearchGate}\, \href{https://www.researchgate.net/profile/Johan_Larsson7}{researchgate.net/profile/Johan\_Larsson7}\\
+  {\aiOrcid}\,
+  \href{https://orcid.org/0000-0002-4029-5945}{orcid.org/0000-0002-4029-5945}\\
+  {\aiResearchGate}\,
+
+  \href{https://www.researchgate.net/profile/Johan_Larsson7}{researchgate.net/profile/Johan\_Larsson7}\\
   {\aiPublons}\, \href{https://publons.com/a/1299032}{publons.com/a/1299032}\\
   {\faGithub}\, \href{https://github.com/jolars}{github.com/jolars}
 \end{minipage}
@@ -286,7 +289,8 @@
 \begin{description}
   \item[2015 -- 2018] {
         \textbf{Research Assistant}, \emph{SensoriMotor Integration Lund
-          (SMIL): collaborative effort between Lund University, Skåne University
+          (SMIL): collaborative effort between Lund University, Skåne
+          University
           Hospital, Malmö University, and Umeå University}
         }
   \item[2015] {
@@ -310,6 +314,7 @@
           Computing}
 
         Project:
+
         \emph{\href{https://summerofcode.withgoogle.com/archive/2018/projects/6276491595743232/}{Fast
             Sparse Linear Models for Big Data with SAGA}}
         }
@@ -328,6 +333,27 @@
 %\printbibliography[title=Conference Papers,heading=subbibnumbered,keyword=conference-paper]
 \printbibliography[title=Conference
   Abstracts,heading=subbibnumbered,keyword=conference-abstract]
+
+\hypertarget{talks}{%
+  \section{Talks}\label{talks}}
+
+\begin{description}[
+    labelwidth = \widthof{2018, June 18} + 1em,
+    leftmargin = \widthof{2018, June 18} + 1em,
+  ]
+  \item[2021, Sep 21] {\textbf{The Hessian Screening Rule and Adaptive Lasso
+          Paths}, \emph{Statistics Seminar at the Department of Mathematical
+          Statistics, Chalmers/Gothenburg University}}
+  \item[2021, Sep 9] {\textbf{Look-Ahead Screening Rules for the Lasso},
+        \emph{European Young Statisticians Meeting (EYSM) 2021}}
+  \item[2020, May 8]
+        \textbf{The Strong Screening Rule for SLOPE}, \emph{Statistical
+          Learning Seminar}
+  \item[2018, June 18] {
+        \textbf{A Case Study in Fitting Area-Proportional Euler Diagrams with
+          Ellipses Using eulerr}, \emph{SetVR 2018}
+        }
+\end{description}
 
 \hypertarget{teaching}{%
   \section{Teaching}\label{teaching}}
@@ -392,18 +418,19 @@
 
         Students:
         \emph{
-          \href{
+          \href  {
+
             https://summerofcode.withgoogle.com/archive/2019/projects/4654960430546944/
           }{
             QinchengLiu (2019)
           },
-          \href{
+          \href  {
+
             https://summerofcode.withgoogle.com/dashboard/project/5459519376719872/overview
           }{
             AkarshGoyal (2020)
           }
-        }
-        }
+        } }
   \item[2017 -- 2019] {
         \textbf{Co-Supervisor, Bachelor's Thesis}, \emph{The Department of
           Orofacial Pain and Jaw Function, Malmö University}
@@ -440,25 +467,6 @@ additional information.
         \url{https://statistical-learning-seminars.github.io/}
 
         Member of organizational committee
-        }
-\end{description}
-
-\hypertarget{talks}{%
-  \section{Talks}\label{talks}}
-
-\begin{description}[
-    labelwidth = \widthof{2018, June 18} + 1em,
-    leftmargin = \widthof{2018, June 18} + 1em,
-  ]
-  \item[2021, Sep 9] {\textbf{Look-Ahead Screening Rules for the Lasso},
-    \emph{EYSM 2021}}
-  \item[2020, May 8] {
-        \textbf{The Strong Screening Rule for SLOPE}, \emph{Statistical
-          Learning Seminar}
-        }
-  \item[2018, June 18] {
-        \textbf{A Case Study in Fitting Area-Proportional Euler Diagrams with
-          Ellipses Using eulerr}, \emph{SetVR 2018}
         }
 \end{description}
 
