Fix compilation error

--- a/cv.tex
+++ b/cv.tex
@@ -146,7 +146,6 @@
   {\aiOrcid}\,
   \href{https://orcid.org/0000-0002-4029-5945}{orcid.org/0000-0002-4029-5945}\\
   {\aiResearchGate}\,
-
   \href{https://www.researchgate.net/profile/Johan_Larsson7}{researchgate.net/profile/Johan\_Larsson7}\\
   {\aiPublons}\, \href{https://publons.com/a/1299032}{publons.com/a/1299032}\\
   {\faGithub}\, \href{https://github.com/jolars}{github.com/jolars}
@@ -345,10 +344,11 @@
           Paths}, \emph{Statistics Seminar at the Department of Mathematical
           Statistics, Chalmers/Gothenburg University}}
   \item[2021, Sep 9] {\textbf{Look-Ahead Screening Rules for the Lasso},
-        \emph{European Young Statisticians Meeting (EYSM) 2021}}
-  \item[2020, May 8]
+    \emph{European Young Statisticians Meeting (EYSM) 2021}}
+  \item[2020, May 8] {
         \textbf{The Strong Screening Rule for SLOPE}, \emph{Statistical
           Learning Seminar}
+        }
   \item[2018, June 18] {
         \textbf{A Case Study in Fitting Area-Proportional Euler Diagrams with
           Ellipses Using eulerr}, \emph{SetVR 2018}
@@ -418,14 +418,12 @@
 
         Students:
         \emph{
-          \href  {
-
+          \href{
             https://summerofcode.withgoogle.com/archive/2019/projects/4654960430546944/
           }{
             QinchengLiu (2019)
           },
-          \href  {
-
+          \href{
             https://summerofcode.withgoogle.com/dashboard/project/5459519376719872/overview
           }{
             AkarshGoyal (2020)
