Don't use italics for CV title

--- a/cv.tex
+++ b/cv.tex
@@ -106,7 +106,7 @@
 \end{titlepage}
 
 \begin{center}
-  {\itshape \large \textcolor{darkgray}{CV}}
+  {\large \textcolor{darkgray}{CV}}
   \medskip
 
   \noindent {\huge \sffamily \bfseries Johan Larsson}
