Add Hessian Screening Rule Paper

--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -258,5 +258,25 @@
 % ? Unused rights: All rights reserved
 % ? Unused version: 5158
 
+@online{larsson2021,
+  title = {The {{Hessian}} Screening Rule},
+  author = {Larsson, Johan and Wallin, Jonas},
+  author+an = {1=highlight},
+  date = {2021-04-27},
+  eprint = {2104.13026},
+  eprinttype = {arxiv},
+  primaryclass = {cs, stat},
+  url = {http://arxiv.org/abs/2104.13026},
+  urldate = {2021-04-29},
+  abstract = {Predictor screening rules, which discard predictors from the design matrix before fitting a model, have had sizable impacts on the speed with which \$\textbackslash ell\_1\$-regularized regression problems, such as the lasso, can be solved. Current state-of-the-art screening rules, however, have difficulties in dealing with highly-correlated predictors, often becoming too conservative. In this paper, we present a new screening rule to deal with this issue: the Hessian Screening Rule. The rule uses second-order information from the model in order to provide more accurate screening as well as higher-quality warm starts. In our experiments on \$\textbackslash ell\_1\$-regularized least-squares (the lasso) and logistic regression, we show that the rule outperforms all other alternatives in simulated experiments with high correlation, as well as in the majority of real datasets that we study.},
+  archiveprefix = {arXiv},
+  keywords = {unpublished-article}
+}
+% == BibLateX quality report for larsson2021:
+% Unexpected field 'primaryclass'
+% Unexpected field 'archiveprefix'
+% ? Unused rights: All rights reserved
+% ? Unused version: 5131
+
 
 
