Change formatting on first page
* Use monospace for links
* Don't use italics

--- a/cv.tex
+++ b/cv.tex
@@ -130,25 +130,25 @@
 
 \begin{minipage}[t]{.5\textwidth}
   \small
-  \itshape
   \noindent
   Holger Crafoords Ekonomicentrum 1\\
   Tycho Brahes väg 1\\
   Box 743, 2207 Lund, Sweden
   \vspace{1ex}\\
-  \href{mailto:johan.larsson@stat.lu.se}{johan.larsson@stat.lu.se}\\
+  \href{mailto:johan.larsson@stat.lu.se}{\nolinkurl{johan.larsson@stat.lu.se}}\\
   +46 730353836
 
 \end{minipage}%
 \begin{minipage}[t]{0.5\textwidth}
-  \raggedleft\itshape\small
-  \href{https://larssonjohan.com}{larssonjohan.com}\\
+  \raggedleft\small
+  \href{https://larssonjohan.com}{\nolinkurl{larssonjohan.com}}\\
   {\aiOrcid}\,
-  \href{https://orcid.org/0000-0002-4029-5945}{orcid.org/0000-0002-4029-5945}\\
+  \href{https://orcid.org/0000-0002-4029-5945}{\nolinkurl{orcid.org/0000-0002-4029-5945}}\\
   {\aiResearchGate}\,
-  \href{https://www.researchgate.net/profile/Johan_Larsson7}{researchgate.net/profile/Johan\_Larsson7}\\
-  {\aiPublons}\, \href{https://publons.com/a/1299032}{publons.com/a/1299032}\\
-  {\faGithub}\, \href{https://github.com/jolars}{github.com/jolars}
+  \href{https://www.researchgate.net/profile/Johan_Larsson7}{\nolinkurl{researchgate.net/profile/Johan\_Larsson7}}\\
+  {\aiPublons}\,
+  \href{https://publons.com/a/1299032}{\nolinkurl{publons.com/a/1299032}}\\
+  {\faGithub}\, \href{https://github.com/jolars}{\nolinkurl{github.com/jolars}}
 \end{minipage}
 
 %\tableofcontents
@@ -404,7 +404,7 @@
         \textbf{Data Visualization}, \emph{Department of Statistics, Lund
           University}
 
-        Design of a distance-based course in data visualization for students on
+        Distance-based course in data visualization for students on
         the undergraduate level.
         }
 \end{description}
