Add whiplash review to bibtex file

--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -1,3 +1,25 @@
+@article{chrcanovic2021,
+  title = {Exercise Therapy for Whiplash-Associated Disorders: A Systematic Review and Meta-Analysis},
+  shorttitle = {Exercise Therapy for Whiplash-Associated Disorders},
+  author = {Chrcanovic, Bruno and Larsson, Johan and Malmström, Eva-Maj and Westergren, Hans and Häggman-Henrikson, Birgitta},
+  Author+an = {2=highlight},
+  date = {2021-09-27},
+  journaltitle = {Scandinavian Journal of Pain},
+  publisher = {{De Gruyter}},
+  issn = {1877-8879},
+  doi = {10.1515/sjpain-2021-0064},
+  url = {https://www.degruyter.com/document/doi/10.1515/sjpain-2021-0064/html},
+  urldate = {2021-09-28},
+  abstract = {Objectives Acute as well as chronic pain syndromes are common after whiplash trauma and exercise therapy is proposed as one possible intervention strategy. The aim of the present systematic review was to evaluate the effect of exercise therapy in patients with Whiplash-Associated Disorders for the improvement of neck pain and neck disability, compared with other therapeutic interventions, placebo interventions, no treatment, or waiting list. Content The review was registered in Prospero (CRD42017060356) and conducted in accordance with the PRISMA (Preferred Reporting Items for Systematic Reviews and Meta-Analyses) guidelines. A literature search in PubMed, Scopus and Cochrane from inception until January 13, 2020 was combined with a hand search to identify eligible randomized controlled studies. Abstract screening, full text assessment and risk of bias assessment (Cochrane RoB 2.0) were conducted by two independent reviewers. Summary The search identified 4,103 articles. After removal of duplicates, screening of 2,921 abstracts and full text assessment of 100 articles, 27 articles that reported data for 2,127 patients were included. The included articles evaluated the effect of exercise therapy on neck pain, neck disability or other outcome measures and indicated some positive effects from exercise, but many studies lacked control groups not receiving active treatment. Studies on exercise that could be included in the random-effect meta-analysis showed significant short-term effects on neck pain and medium-term effects on neck disability. Outlook Despite a large number of articles published in the area of exercise therapy and Whiplash-Associated Disorders, the current evidence base is weak. The results from the present review with meta-analysis suggests that exercise therapy may provide additional effect for improvement of neck pain and disability in patients with Whiplash-Associated Disorders.},
+  langid = {english},
+  keywords = {published-article}
+}
+% == BibLateX quality report for chrcanovic2021:
+% Unexpected field 'publisher'
+% ? Unused libraryCatalog: www.degruyter.com
+% ? Unused rights: All rights reserved
+% ? Unused version: 5164
+
 @article{akerblom2019,
   title      = {Acceptance: A Factor to Consider in Persistent Pain after Neck Trauma},
   shorttitle = {Acceptance},
