--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -260,6 +260,24 @@
 % == BibLateX quality report for larsson2020c:
 % ? Unsure about the formatting of the booktitle
 
+@inproceedings{larsson2021b,
+  title      = {Look-Ahead Screening Rules for the Lasso},
+  booktitle  = {22nd {{European Young Statisticians Meeting}} -- {{Proceedings}}},
+  author     = {Larsson, Johan},
+  Author+an  = {1=highlight},
+  editor     = {{Andreas Makridis} and {Fotios S. Milienos} and {Panagiotis Papastamoulis} and {Christina Parpoula} and {Athanasios Rakitzis}},
+  date       = {2021-09-06/2021-09-10},
+  pages      = {61--65},
+  publisher  = {{Panteion University of Social and Political Sciences}},
+  location   = {{Athens, Greece}},
+  url        = {https://www.eysm2021.panteion.gr/files/Proceedings_EYSM_2021.pdf},
+  abstract   = {The lasso is a popular method to induce shrinkage and sparsity in the solution vector (coefficients) of regression problems, particularly when there are many predictors relative to the number of observations. Solving the lasso in this high-dimensional setting can, however, be computationally demanding. Fortunately, this demand can be alleviated via the use of screening rules that discard predictors prior to fitting the model, leading to a reduced problem to be solved. In this paper, we present a new screening strategy: look-ahead screening. Our method uses safe screening rules to find a range of penalty values for which a given predictor cannot enter the model, thereby screening predictors along the remainder of the path. In experiments we show that these look-ahead screening rules outperform the active warm-start version of the Gap Safe rules.},
+  eventtitle = {22nd {{European Young Statisticians Meeting}}},
+  isbn       = {978-960-7943-23-1},
+  langid     = {english},
+  keywords   = {published-article}
+}
+
 @online{larsson2021a,
   title = {Look-Ahead Screening Rules for the Lasso},
   author = {Larsson, Johan},
