Update CV with talks and contracted work

--- a/cv.tex
+++ b/cv.tex
@@ -326,6 +326,8 @@
     labelwidth = \widthof{2018, June 18} + 1em,
     leftmargin = \widthof{2018, June 18} + 1em,
   ]
+  \item[2021, Oct 27] {\textbf{Designing a Distance-Based Course in Data
+        Visualizations: Lessons Learned}, \emph{Cramér Society Fall Meeting}}
   \item[2021, Sep 21] {\textbf{The Hessian Screening Rule and Adaptive Lasso
           Paths}, \emph{Statistics Seminar at the Department of Mathematical
           Statistics, Chalmers/Gothenburg University}}
@@ -362,11 +364,21 @@
 
 \begin{description}
 
+  \item[2021]{
+        \textbf{Introduction to R Programming}, \emph{Department of Statistics,
+          Lund University}
+        }
+
   \item[2019--2020]{
         \textbf{Data Mining and Visualization}, \emph{Department of Statistics,
           Lund University}
 
         % A graduate level course in statistical learning that I served as a teaching assistant for. I redesigned the lab activities.
+        }
+
+  \item[2019--2021]{
+        \textbf{Statistics for Fire Engineers},
+        \emph{Department of Statistics, Lund University}
         }
 
   \item[2019]{
@@ -392,6 +404,17 @@
         Distance-based course in data visualization for students on
         the undergraduate level.
         }
+\end{description}
+
+\section{Contracted Work}
+
+\begin{description}
+  \item[2021]{
+      \textbf{WHO Antimicrobial Resistance Dashboard}
+
+      Contracted work to develop and deploy a visualization dashboard for 
+      WHO's Antimicrobial Resistance team in Europe.
+    }
 \end{description}
 
 \section{Supervision and Mentorship}
