Update CV with referee service

--- a/cv.tex
+++ b/cv.tex
@@ -147,37 +147,37 @@
 
 \begin{description}
   \item[2018 -- now] {
-        \textbf{PhD in Statistics}, \emph{Department of Statistics, Lund
-          University}
+    \textbf{PhD in Statistics}, \emph{Department of Statistics, Lund
+      University}
 
-        Supervisor: \emph{Jonas Wallin}
-        }
+    Supervisor: \emph{Jonas Wallin}
+    }
 
   \item[2018] {
-        \textbf{Bachelor's Degree in Statistics}, \emph{Lund University}
+    \textbf{Bachelor's Degree in Statistics}, \emph{Lund University}
 
-        Supervisor: \emph{Peter Gustafsson}
+    Supervisor: \emph{Peter Gustafsson}
 
-        Title: \emph{eulerr: Area-proportional euler diagrams with ellipses}
-        }
+    Title: \emph{eulerr: Area-proportional euler diagrams with ellipses}
+    }
 
   \item[2015 -- 2017] {
-        \textbf{Master's Degree in Medical Science}, \emph{Lund University}
+    \textbf{Master's Degree in Medical Science}, \emph{Lund University}
 
-        Supervisor: \emph{Eva-Maj Malmström}
+    Supervisor: \emph{Eva-Maj Malmström}
 
-        Title: \emph{Gym-based exercise therapy for patients with persistent
-          neck pain: A research protocol for a randomized controlled trial}
-        }
+    Title: \emph{Gym-based exercise therapy for patients with persistent
+      neck pain: A research protocol for a randomized controlled trial}
+    }
 
   \item[2011 -- 2014] {
-        \textbf{Bachelor's Degree in Physical Therapy}, \emph{Lund University}
+    \textbf{Bachelor's Degree in Physical Therapy}, \emph{Lund University}
 
-        Supervisor: \emph{Amanda Lundvik Gyllensten}
+    Supervisor: \emph{Amanda Lundvik Gyllensten}
 
-        Title: \emph{The professional role and technology use among physical
-          therapists in Tokyo: A qualitative interview study}
-        }
+    Title: \emph{The professional role and technology use among physical
+      therapists in Tokyo: A qualitative interview study}
+    }
 \end{description}
 
 % \hypertarget{courses}{%
@@ -272,36 +272,36 @@
 
 \begin{description}
   \item[2015 -- 2018] {
-        \textbf{Research Assistant}, \emph{SensoriMotor Integration Lund
-          (SMIL): collaborative effort between Lund University, Skåne
-          University
-          Hospital, Malmö University, and Umeå University}
-        }
+    \textbf{Research Assistant}, \emph{SensoriMotor Integration Lund
+      (SMIL): collaborative effort between Lund University, Skåne
+      University
+      Hospital, Malmö University, and Umeå University}
+    }
   \item[2015] {
-        \textbf{Research Assistant}, \emph{The Department of Pain
-          Rehabilitation, Skåne University Hospital}
+    \textbf{Research Assistant}, \emph{The Department of Pain
+      Rehabilitation, Skåne University Hospital}
 
-        % Together with supervisors Eva-Maj Malmström and Hans Westergren I studied patients with longstanding whiplash-associated disorders, which resulted in one publication and two poster presentations.
-        }
+    % Together with supervisors Eva-Maj Malmström and Hans Westergren I studied patients with longstanding whiplash-associated disorders, which resulted in one publication and two poster presentations.
+    }
   \item[2014] {
-        \textbf{Research Assistant}, \emph{Department of Clinical Sciences,
-          Lund University}
+    \textbf{Research Assistant}, \emph{Department of Clinical Sciences,
+      Lund University}
 
-        % As part of a research stipend from the Faculty of Medicine at Lund University, I -- under supervision of Eva-Ekvall Hansson and Michael Miller -- studied the gait of dizzy, elderly patients. This work resulted in two publications.
-        }
+    % As part of a research stipend from the Faculty of Medicine at Lund University, I -- under supervision of Eva-Ekvall Hansson and Michael Miller -- studied the gait of dizzy, elderly patients. This work resulted in two publications.
+    }
 \end{description}
 
 \section{Scholarships}
 \begin{description}
   \item[2018] {
-        \textbf{Google Summer of Code}, \emph{The R Project for Statistical
-          Computing}
+    \textbf{Google Summer of Code}, \emph{The R Project for Statistical
+      Computing}
 
-        Project:
+    Project:
 
-        \emph{\href{https://summerofcode.withgoogle.com/archive/2018/projects/6276491595743232/}{Fast
-            Sparse Linear Models for Big Data with SAGA}}
-        }
+    \emph{\href{https://summerofcode.withgoogle.com/archive/2018/projects/6276491595743232/}{Fast
+        Sparse Linear Models for Big Data with SAGA}}
+    }
 \end{description}
 
 \section{Publications}
@@ -327,20 +327,20 @@
     leftmargin = \widthof{2018, June 18} + 1em,
   ]
   \item[2021, Oct 27] {\textbf{Designing a Distance-Based Course in Data
-        Visualizations: Lessons Learned}, \emph{Cramér Society Fall Meeting}}
+      Visualizations: Lessons Learned}, \emph{Cramér Society Fall Meeting}}
   \item[2021, Sep 21] {\textbf{The Hessian Screening Rule and Adaptive Lasso
-          Paths}, \emph{Statistics Seminar at the Department of Mathematical
-          Statistics, Chalmers/Gothenburg University}}
+      Paths}, \emph{Statistics Seminar at the Department of Mathematical
+      Statistics, Chalmers/Gothenburg University}}
   \item[2021, Sep 9] {\textbf{Look-Ahead Screening Rules for the Lasso},
     \emph{European Young Statisticians Meeting (EYSM) 2021}}
   \item[2020, May 8] {
-        \textbf{The Strong Screening Rule for SLOPE}, \emph{Statistical
-          Learning Seminar}
-        }
+    \textbf{The Strong Screening Rule for SLOPE}, \emph{Statistical
+      Learning Seminar}
+    }
   \item[2018, June 18] {
-        \textbf{A Case Study in Fitting Area-Proportional Euler Diagrams with
-          Ellipses Using eulerr}, \emph{SetVR 2018}
-        }
+    \textbf{A Case Study in Fitting Area-Proportional Euler Diagrams with
+      Ellipses Using eulerr}, \emph{SetVR 2018}
+    }
 \end{description}
 
 \section{Teaching}
@@ -349,14 +349,14 @@
 
 \begin{description}
   \item[2020--2021]{
-        \textbf{Data Visualization}, \emph{Department of Statistics, Lund
-          University}
+              \textbf{Data Visualization}, \emph{Department of Statistics, Lund
+                University}
         }
   \item[2019--2021]{
-        \textbf{Statistics: Basic Course}, \emph{Department of Statistics, Lund
-          University}
+              \textbf{Statistics: Basic Course}, \emph{Department of Statistics, Lund
+                University}
 
-        % An undergraduate level course in basic statistics that I served as a teaching assistant and lecturer for.
+              % An undergraduate level course in basic statistics that I served as a teaching assistant and lecturer for.
         }
 \end{description}
 
@@ -365,44 +365,44 @@
 \begin{description}
 
   \item[2021]{
-        \textbf{Introduction to R Programming}, \emph{Department of Statistics,
-          Lund University}
+              \textbf{Introduction to R Programming}, \emph{Department of Statistics,
+                Lund University}
         }
 
   \item[2019--2020]{
-        \textbf{Data Mining and Visualization}, \emph{Department of Statistics,
-          Lund University}
+              \textbf{Data Mining and Visualization}, \emph{Department of Statistics,
+                Lund University}
 
-        % A graduate level course in statistical learning that I served as a teaching assistant for. I redesigned the lab activities.
+              % A graduate level course in statistical learning that I served as a teaching assistant for. I redesigned the lab activities.
         }
 
   \item[2019--2021]{
-        \textbf{Statistics for Fire Engineers},
-        \emph{Department of Statistics, Lund University}
+              \textbf{Statistics for Fire Engineers},
+              \emph{Department of Statistics, Lund University}
         }
 
   \item[2019]{
-        \textbf{Artificial Intelligence and Deep Learning Methods},
-        \emph{Department of Statistics, Lund University}
+              \textbf{Artificial Intelligence and Deep Learning Methods},
+              \emph{Department of Statistics, Lund University}
 
-        % A graduate level course in deep learning that I served as a teaching assistant for.
+              % A graduate level course in deep learning that I served as a teaching assistant for.
         }
-        % \item[2016 -- 2018]{
-        %     \textbf{Teaching Assistant}, \emph{Department of Physiotherapy, Lund University}
+  % \item[2016 -- 2018]{
+  %     \textbf{Teaching Assistant}, \emph{Department of Physiotherapy, Lund University}
 
-        %     % I served as a teaching assistant for students at the program of medicine.
-        % }
+  %     % I served as a teaching assistant for students at the program of medicine.
+  % }
 \end{description}
 
 \subsection{Course Development}
 
 \begin{description}
   \item[2020]{
-        \textbf{Data Visualization}, \emph{Department of Statistics, Lund
-          University}
+              \textbf{Data Visualization}, \emph{Department of Statistics, Lund
+                University}
 
-        Distance-based course in data visualization for students on
-        the undergraduate level.
+              Distance-based course in data visualization for students on
+              the undergraduate level.
         }
 \end{description}
 
@@ -410,52 +410,59 @@
 
 \begin{description}
   \item[2021]{
-      \textbf{WHO Antimicrobial Resistance Dashboard}
+              \textbf{WHO Antimicrobial Resistance Dashboard}
 
-      Contracted work to develop and deploy a visualization dashboard for 
-      WHO's Antimicrobial Resistance team in Europe.
-    }
+              Contracted work to develop and deploy a visualization dashboard for
+              WHO's Antimicrobial Resistance team in Europe.
+        }
 \end{description}
 
 \section{Supervision and Mentorship}
 
 \begin{description}
+  \item[2022] {
+    \textbf{Main Supervisor, Master's Thesis}, \emph{Data Analysis and
+    Business Analytics, The Department of Statistics, Lund University}
+
+    % Supervision of two students at undergraduate level for a project regarding exercise for neck and jaw pain.
+    }
   \item[2019 -- 2021]{
-        \textbf{Google Summer of School}
+              \textbf{Google Summer of School}
 
-        Students:
-        \emph{
-          \href{
-            https://summerofcode.withgoogle.com/archive/2019/projects/4654960430546944/
-          }{
-            QinchengLiu (2019)
-          },
-          \href{
-            https://summerofcode.withgoogle.com/dashboard/project/5459519376719872/overview
-          }{
-            AkarshGoyal (2020)
-          }
-        } }
+              Students:
+              \emph{
+                \href{
+                  https://summerofcode.withgoogle.com/archive/2019/projects/4654960430546944/
+                }{
+                  QinchengLiu (2019)
+                },
+                \href{
+                  https://summerofcode.withgoogle.com/dashboard/project/5459519376719872/overview
+                }{
+                  AkarshGoyal (2020)
+                }
+              } }
   \item[2017 -- 2019] {
-        \textbf{Co-Supervisor, Bachelor's Thesis}, \emph{The Department of
-          Orofacial Pain and Jaw Function, Malmö University}
+    \textbf{Co-Supervisor, Bachelor's Thesis}, \emph{The Department of
+      Orofacial Pain and Jaw Function, Malmö University}
 
-        % Supervision of two students at undergraduate level for a project regarding exercise for neck and jaw pain.
-        }
+    % Supervision of two students at undergraduate level for a project regarding exercise for neck and jaw pain.
+    }
   \item[2017 -- 2018] {
-        \textbf{Co-Supervisor, Master's Thesis}, \emph{The Department of
-          Orofacial Pain and Jaw Function, Malmö University}
+    \textbf{Co-Supervisor, Master's Thesis}, \emph{The Department of
+      Orofacial Pain and Jaw Function, Malmö University}
 
-        % Supervision of two students at master's level for a project about biofeedback and posture.
-        }
+    % Supervision of two students at master's level for a project about biofeedback and posture.
+    }
 \end{description}
 
 \section{Referee Service}
 
 \begin{itemize}
-  \item Gait \& Posture (ISSN: 0966-6362)
-  \item Journal of Clinical Interventions in Aging (ISSN: 1178-1998)
-  \item Spine (ISSN: 0362-2436)
+  \item International Conference for Machine Learning (ICML), ISSN: 2640-3498
+        % \item Gait \& Posture (ISSN: 0966-6362)
+        % \item Journal of Clinical Interventions in Aging (ISSN: 1178-1998)
+        % \item Spine (ISSN: 0362-2436)
   \item Archives of Physical Medicine and Rehabilitation (ISSN: 0003-9993)
 \end{itemize}
 See \href{http://publons.com/a/1299032}{publons.com/a/1299032} for
@@ -468,10 +475,10 @@ additional information.
     leftmargin = \widthof{2020} + 1em,
   ]
   \item[2020]{
-        \textbf{Statistical Learning Seminar Series},
-        \url{https://statistical-learning-seminars.github.io/}
+              \textbf{Statistical Learning Seminar Series},
+              \url{https://statistical-learning-seminars.github.io/}
 
-        Member of organizational committee
+              Member of organizational committee
         }
 \end{description}
 
@@ -482,27 +489,27 @@ additional information.
     leftmargin = \widthof{qualpalr} + 1em,
   ]
   \item[SLOPE] {
-        Generalized Linear Models Penalized with SLOPE
+    Generalized Linear Models Penalized with SLOPE
 
-        \url{https://CRAN.R-project.org/package=SLOPE}
-        }
-  \item[sgdnet] {
-        Elastic Net-regularized Generalized Linear Models via the efficient
-        SAGA algorithm
+    \url{https://CRAN.R-project.org/package=SLOPE}
+    }
+  % \item[sgdnet] {
+  %   Elastic Net-regularized Generalized Linear Models via the efficient
+  %   SAGA algorithm
 
-        \url{https://github.com/jolars/sgdnet}
-        }
+  %   \url{https://github.com/jolars/sgdnet}
+  %   }
   \item[eulerr] {
-        Area-Proportional Euler diagrams with ellipses
+    Area-Proportional Euler diagrams with ellipses
 
-        \url{https://CRAN.R-project.org/package=eulerr}
-        }
+    \url{https://CRAN.R-project.org/package=eulerr}
+    }
   \item[qualpalr] {
-        Automatic generation of qualitative color palettes using color
-        difference algorithms
+    Automatic generation of qualitative color palettes using color
+    difference algorithms
 
-        \url{https://CRAN.R-project.org/package=tactile}
-        }
+    \url{https://CRAN.R-project.org/package=tactile}
+    }
 
 \end{description}
 
